Fix description text overlap on mobile

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 }
 
 body {
+  background-color: rgb(249, 250, 251);
   display: flex;
   flex-flow: row wrap;
   font-family: 'Sora', sans-serif;
@@ -58,7 +59,6 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: rgb(249, 250, 251);
   width: 60vw;
 }
 
@@ -210,7 +210,6 @@ a:is(:link, :visited):active {
 
   main {
     width: initial;
-    height: 100%;
   }
 
   .logo-container {
@@ -220,6 +219,10 @@ a:is(:link, :visited):active {
 
   .description-container {
     padding: 0 10px 0 10px;
+  }
+
+  .description {
+    margin-top: 20px;
   }
 
   .remote-text {
@@ -258,9 +261,5 @@ a:is(:link, :visited):active {
 
   body {
     height: initial;
-  }
-
-  .description {
-    margin-top: 20px;
   }
 }
